--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,9 @@
   "build": {
     "dockerfile": "Dockerfile",
     "context": "..",
-    "args": { "PLATFORM": "${localEnv:DOCKER_DEFAULT_PLATFORM}" }
+    "args": {
+      "PLATFORM": "linux/arm64"
+    }
   },
   "appPort": [
     8000
@@ -12,6 +14,8 @@
     8000,
     5678
   ],
+  "postCreateCommand": "pip install --no-cache-dir -r requirements.txt && pip install debugpy && uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload",
+  "remoteUser": "root",
   "customizations": {
     "vscode": {
       "settings": {
@@ -24,7 +28,5 @@
         "ms-python.debugpy"
       ]
     }
-  },
-  "postCreateCommand": "pip install --no-cache-dir -r requirements.txt && pip install debugpy",
-  "remoteUser": "vscode"
+  }
 }
