--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,12 +7,13 @@
     8000,
     5678
   ],
-  "postCreateCommand": "pip install --no-cache-dir -r requirements.txt && pip install debugpy",
+  "postCreateCommand": "pip install --no-cache-dir -r requirements.txt && pip install debugpy && cd /workspace/ && uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload",
   "remoteUser": "vscode",
   "customizations": {
     "vscode": {
       "settings": {
-        "terminal.integrated.defaultProfile.linux": "sh"
+        "terminal.integrated.defaultProfile.linux": "sh",
+        "python.defaultInterpreterPath": "/usr/local/bin/python3"
       },
       "extensions": [
         "ms-python.python",
@@ -22,5 +23,4 @@
       ]
     }
   }
-  
 }
