feat: Enable devcontainer (4) & pytest files

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,6 @@
 # 멀티 플랫폼 지원 (ARM64 & x86_64)
 ARG PLATFORM=linux/arm64
-FROM --platform=${PLATFORM} python:3.10
+FROM --platform=${PLATFORM} python:3.11
 
 # 필수 패키지, oh-my-zsh 설치
 RUN apt-get update && apt-get install -y sudo zsh curl git && \
@@ -16,12 +16,13 @@ COPY /app ./app
 
 # FastAPI 실행에 필요한 패키지 설치
 COPY requirements.txt ./requirements.txt
-
 # DevContainer에서는 테스트 패키지도 설치
 COPY requirements.dev.txt ./requirements.dev.txt
-RUN python -m pip install --upgrade pip && \
+RUN python3 -m pip install --upgrade pip && \
   cat ./requirements.txt && pip install --no-cache-dir -r ./requirements.txt && \
   cat ./requirements.dev.txt && pip install --no-cache-dir -r ./requirements.dev.txt
+
+ENV PYTHONPATH="/workspace"
 
 # 권한 설정 (vscode 사용자가 실행 가능하도록)
 RUN chown -R vscode:vscode /workspace/app && \
